--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
 
 .grid{
     display: grid;
-    grid-template-rows: 40px 1fr 30px;
+    grid-template-rows: 40px 1fr 1fr 18px;
     grid-template-columns: 1fr;
 }
 
@@ -26,11 +26,12 @@ header {
 }
 
 main {
-    background-color: orange; 
+    background-color: tomato; 
     grid-column: span 2;
+    grid-row: 2 / 4;
     display: grid;
     grid-template-columns: 20% 1fr;
-    grid-template-rows: 60px 1fr 30%;
+    grid-template-rows: 60px 1fr;
 }
 
 div.dados {
@@ -47,9 +48,10 @@ div.dados input {
 
 div.dados #box1 {
     background-color: red;
-    width: 70px;
+    width: 100px;
+    font-size: 18px;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
 }
 
 div.forca {
@@ -57,19 +59,39 @@ div.forca {
     display: flex;
 }
 
-div.forca img{
+div.img img{
     width: 100%;
     height: 100%;
 }
 
 div.jogo {
     background-color: pink;
+    display: grid;
+    grid-template-rows: 1fr 30px;
 }
 
+div.jogo div{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
 
+div.jogo p {
+    font-size: 50px;
+}
+
+div.corpo {
+    grid-row: 4 / 5 ;
+    grid-column: span 2;
+    background-color: orange;
+    height: 200px;
+}
 
 footer {
     background-color: blue;
-    grid-row: 3 / 4;
+    grid-row: 4;
     grid-column: span 2;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
